Add MacroDroid-style privileged connectivity fallbacks